--- a/Clavamox_Landingpage/index.html
+++ b/Clavamox_Landingpage/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="xarope_dosagem_colheres_container"></div>
             <div class="xarope_dosagem_slidecontainer">
-                <img id="spoon_image" src="assets/imagem_1.png"/>
+                <img id="spoon_image" src="assets/imagem_1.svg"/>
                 <div class="xarope_dosagem_slidecontainer_kg" id="xarope_dosagem_kg">5</div>
                 <div class="xarope_dosagem_slidecontainer_desc">kg (peso da criança)</div>
                 <div class="slideContainer">
@@ -47,35 +47,35 @@ var output = document.getElementById("xarope_dosagem_kg");
 output.innerHTML = slider.value;
 
 const array = [
-    { 'value' : 5, 'dose' : 1.9, image: 'assets/imagem_1.png'},
-    { 'value' : 6, 'dose' : 2.3, image: 'assets/imagem_2.png'},
-    { 'value' : 7, 'dose' : 2.6, image: 'assets/imagem_3.png'},
-    { 'value' : 8, 'dose' : 3.0, image: 'assets/imagem_4.png'},
-    { 'value' : 9, 'dose' : 3.4, image: 'assets/imagem_5.png'},
-    { 'value' : 10, 'dose' : 3.8, image: 'assets/imagem_6.png'},
-    { 'value' : 11, 'dose' : 4.1, image: 'assets/imagem_7.png'},
-    { 'value' : 12, 'dose' : 4.5, image: 'assets/imagem_8.png'},
-    { 'value' : 13, 'dose' : 4.9, image: 'assets/imagem_9.png'},
-    { 'value' : 14, 'dose' : 5.3, image: 'assets/imagem_10.png'},
-    { 'value' : 15, 'dose' : 5.6, image: 'assets/imagem_11.png'},
-    { 'value' : 16, 'dose' : 6.0, image: 'assets/imagem_12.png'},
-    { 'value' : 17, 'dose' : 6.4, image: 'assets/imagem_13.png'},
-    { 'value' : 18, 'dose' : 6.8, image: 'assets/imagem_14.png'},
-    { 'value' : 19, 'dose' : 7.1, image: 'assets/imagem_15.png'},
-    { 'value' : 20, 'dose' : 7.5, image: 'assets/imagem_16.png'},
-    { 'value' : 21, 'dose' : 7.9, image: 'assets/imagem_17.png'},
-    { 'value' : 22, 'dose' : 8.3, image: 'assets/imagem_18.png'},
-    { 'value' : 23, 'dose' : 8.6, image: 'assets/imagem_19.png'},
-    { 'value' : 24, 'dose' : 9.0, image: 'assets/imagem_20.png'},
-    { 'value' : 25, 'dose' : 9.4, image: 'assets/imagem_21.png'},
-    { 'value' : 26, 'dose' : 9.8, image: 'assets/imagem_22.png'},
-    { 'value' : 27, 'dose' : 10.1, image: 'assets/imagem_23.png'},
-    { 'value' : 28, 'dose' : 10.5, image: 'assets/imagem_24.png'},
-    { 'value' : 29, 'dose' : 10.9, image: 'assets/imagem_25.png'},
-    { 'value' : 30, 'dose' : 11.3, image: 'assets/imagem_26.png'},
-    { 'value' : 31, 'dose' : 11.6, image: 'assets/imagem_27.png'},
-    { 'value' : 32, 'dose' : 12.0, image: 'assets/imagem_28.png'},
-    { 'value' : 33, 'dose' : 12.5, image: 'assets/imagem_29.png'},
+    { 'value' : 5, 'dose' : 1.9, image: 'assets/imagem_1.svg'},
+    { 'value' : 6, 'dose' : 2.3, image: 'assets/imagem_2.svg'},
+    { 'value' : 7, 'dose' : 2.6, image: 'assets/imagem_3.svg'},
+    { 'value' : 8, 'dose' : 3.0, image: 'assets/imagem_4.svg'},
+    { 'value' : 9, 'dose' : 3.4, image: 'assets/imagem_5.svg'},
+    { 'value' : 10, 'dose' : 3.8, image: 'assets/imagem_6.svg'},
+    { 'value' : 11, 'dose' : 4.1, image: 'assets/imagem_7.svg'},
+    { 'value' : 12, 'dose' : 4.5, image: 'assets/imagem_8.svg'},
+    { 'value' : 13, 'dose' : 4.9, image: 'assets/imagem_9.svg'},
+    { 'value' : 14, 'dose' : 5.3, image: 'assets/imagem_10.svg'},
+    { 'value' : 15, 'dose' : 5.6, image: 'assets/imagem_11.svg'},
+    { 'value' : 16, 'dose' : 6.0, image: 'assets/imagem_12.svg'},
+    { 'value' : 17, 'dose' : 6.4, image: 'assets/imagem_13.svg'},
+    { 'value' : 18, 'dose' : 6.8, image: 'assets/imagem_14.svg'},
+    { 'value' : 19, 'dose' : 7.1, image: 'assets/imagem_15.svg'},
+    { 'value' : 20, 'dose' : 7.5, image: 'assets/imagem_16.svg'},
+    { 'value' : 21, 'dose' : 7.9, image: 'assets/imagem_17.svg'},
+    { 'value' : 22, 'dose' : 8.3, image: 'assets/imagem_18.svg'},
+    { 'value' : 23, 'dose' : 8.6, image: 'assets/imagem_19.svg'},
+    { 'value' : 24, 'dose' : 9.0, image: 'assets/imagem_20.svg'},
+    { 'value' : 25, 'dose' : 9.4, image: 'assets/imagem_21.svg'},
+    { 'value' : 26, 'dose' : 9.8, image: 'assets/imagem_22.svg'},
+    { 'value' : 27, 'dose' : 10.1, image: 'assets/imagem_23.svg'},
+    { 'value' : 28, 'dose' : 10.5, image: 'assets/imagem_24.svg'},
+    { 'value' : 29, 'dose' : 10.9, image: 'assets/imagem_25.svg'},
+    { 'value' : 30, 'dose' : 11.3, image: 'assets/imagem_26.svg'},
+    { 'value' : 31, 'dose' : 11.6, image: 'assets/imagem_27.svg'},
+    { 'value' : 32, 'dose' : 12.0, image: 'assets/imagem_28.svg'},
+    { 'value' : 33, 'dose' : 12.5, image: 'assets/imagem_29.svg'},
 ];
 
 document.getElementById("slider").oninput = function() {
